--- a/Shop/webapp/products.xhtml
+++ b/Shop/webapp/products.xhtml
@@ -61,6 +61,8 @@
 
 			<p:column headerText="Categoria" style="text-align: center">
 				<h:outputText value="#{product.category}" />
+				<br />
+				<h:outputText value="#{product.index}" />
 			</p:column>
 		</p:dataTable>
 	</h:form>
