--- a/Shop/webapp/product.xhtml
+++ b/Shop/webapp/product.xhtml
@@ -7,6 +7,8 @@
 
 <f:metadata>
 	<f:viewParam name="#{product}"></f:viewParam>
+	<f:viewParam name="#{category}"></f:viewParam>
+	<f:viewParam name="#{index}"></f:viewParam>
 </f:metadata>
 
 <h:head>
@@ -17,7 +19,21 @@
 
 <h:body>
 	<h:form>
-		products.xhtml
+		<ui:param name="product"
+			value="#{productController.product(category, index)}" />
+
+		<p:panelGrid columns="3" layout="grid">
+			<f:facet name="header">
+				<h1>#{product.name}</h1>
+			</f:facet>
+
+			<h2>#{product.price}</h2>
+			<h2>#{product.brand}</h2>
+			<h2>#{product.category}</h2>
+			<h2>#{product.image}</h2>
+			<h2>#{product.link}</h2>
+			<h2>#{product.programId}</h2>
+		</p:panelGrid>
 	</h:form>
 </h:body>
 </html>
