Store logo added

--- a/Shop/webapp/product.xhtml
+++ b/Shop/webapp/product.xhtml
@@ -40,9 +40,8 @@
 					<h2 style="color: grey">#{product.brand}</h2>
 				</p:outputLabel>
 
-				<p:outputLabel>
-					<h2>#{product.programId}</h2>
-				</p:outputLabel>
+				<p:graphicImage
+					url="/resources/images/store/#{product.programId}.png"></p:graphicImage>
 
 				<p:link href="#{product.link}"
 					style="text-decoration: none !important; background-color:black"
