--- a/Shop/webapp/index.xhtml
+++ b/Shop/webapp/index.xhtml
@@ -18,6 +18,11 @@
 </h:head>
 
 <h:body style="margin:0; padding:0;">
+	<div class="ui-grid ui-grid-responsive"
+		style="background-color: black; height: 80px; background-repeat: no-repeat; background-size: 100% 100%;">
+		<ui:include src="header.xhtml" />
+	</div>
+
 	<ui:include src="category.xhtml" />
 	<!--ui:include src="content.xhtml" /-->
 </h:body>
