--- a/Shop/webapp/product.xhtml
+++ b/Shop/webapp/product.xhtml
@@ -17,38 +17,61 @@
 		type="text/css" charset="utf-8" />
 </h:head>
 
-<h:body>
+<h:body style="margin:0; padding:0;">
+	<div class="ui-grid ui-grid-responsive"
+		style="background-color: black; height: 80px; background-repeat: no-repeat; background-size: 100% 100%;">
+		<ui:include src="header.xhtml" />
+	</div>
+
 	<center>
 		<h:form>
 			<ui:param name="product"
 				value="#{productController.product(category, index)}" />
 
-			<p:panelGrid columns="3" style="width:100%; text-align: center"
-				columnClasses="one-third,one-third,one-third">
 
-				<p:graphicImage url="#{product.image}" alt="#{product.name}" />
+			<div class="ui-g">
+				<div class="ui-g-12 ui-md-4 ui-lg-4">
+					<p:panel style="height: 270px">
+						<p:graphicImage url="#{product.image}" alt="#{product.name}" />
+					</p:panel>
+				</div>
+				<div class="ui-g-12 ui-md-8 ui-lg-8">
+					<p:panel style="height: 270px">
+						<div class="ui-g" style="padding: 15px">
+							<div class="ui-g-12 ui-md-12 ui-lg-12">
+								<p:outputLabel>
+									<h1 style="color: #00a6dd;">#{product.name}</h1>
+								</p:outputLabel>
+							</div>
+						</div>
+						<div class="ui-g" style="padding: 15px">
+							<div class="ui-g-12 ui-md-6 ui-lg-3">
+								<p:outputLabel>
+									<h2 style="color: #9fca3b">#{product.formattedPrice}</h2>
+								</p:outputLabel>
+							</div>
+							<div class="ui-g-12 ui-md-6 ui-lg-3">
+								<p:outputLabel>
+									<h2 style="color: grey">#{product.brand}</h2>
+								</p:outputLabel>
+							</div>
+							<div class="ui-g-12 ui-md-6 ui-lg-3">
+								<div class="ui-g-12 ui-md-6 ui-lg-6">
+									<p:graphicImage
+										url="/resources/images/store/#{product.programId}.png"></p:graphicImage>
+								</div>
+							</div>
+							<div class="ui-g-12 ui-md-6 ui-lg-3">
+								<p:link href="#{product.link}" class="button"
+									style="color: white">
+									<h2>Ir à loja</h2>
+								</p:link>
+							</div>
+						</div>
+					</p:panel>
+				</div>
+			</div>
 
-				<p:outputLabel>
-					<h1 style="color: #00a6dd;">#{product.name}</h1>
-				</p:outputLabel>
-
-				<p:outputLabel>
-					<h2 style="color: #9fca3b">#{product.formattedPrice}</h2>
-				</p:outputLabel>
-
-				<p:outputLabel>
-					<h2 style="color: grey">#{product.brand}</h2>
-				</p:outputLabel>
-
-				<p:graphicImage
-					url="/resources/images/store/#{product.programId}.png"></p:graphicImage>
-
-				<p:link href="#{product.link}"
-					style="text-decoration: none !important; background-color:black"
-					class="button">
-					<h2 style="color: white">Ir à loja</h2>
-				</p:link>
-			</p:panelGrid>
 		</h:form>
 	</center>
 </h:body>
