Support more stores

--- a/Shop/webapp/product.xhtml
+++ b/Shop/webapp/product.xhtml
@@ -56,7 +56,7 @@
 							<div class="ui-g-12 ui-md-6 ui-lg-3">
 								<div class="ui-g-12 ui-md-6 ui-lg-6">
 									<p:graphicImage
-										url="/resources/images/store/#{product.programId}.png"></p:graphicImage>
+										url="https://darwin.affiliatewindow.com/images/upload/zanox/merchant/profile/#{product.programId}.png?1393598179"></p:graphicImage>
 								</div>
 							</div>
 							<div class="ui-g-12 ui-md-6 ui-lg-3">
