--- a/Shop/webapp/product.xhtml
+++ b/Shop/webapp/product.xhtml
@@ -29,20 +29,21 @@
 				value="#{productController.product(category, index)}" />
 
 
-			<p:panel style="height: 270px">
+			<p:panel style="height: 280px">
 				<div class="ui-g">
 					<div class="ui-g-12 ui-md-4 ui-lg-4">
-						<p:graphicImage url="#{product.image}" alt="#{product.name}" />
+						<p:graphicImage url="#{product.image}" alt="#{product.name}"
+							style="max-height:250px; max-width:250px" />
 					</div>
 					<div class="ui-g-12 ui-md-8 ui-lg-8">
-						<div class="ui-g" style="padding: 15px">
+						<div class="ui-g" style="padding: 0px">
 							<div class="ui-g-12 ui-md-12 ui-lg-12">
 								<p:outputLabel>
 									<h1 style="color: #00a6dd;">#{product.name}</h1>
 								</p:outputLabel>
 							</div>
 						</div>
-						<div class="ui-g" style="padding: 15px">
+						<div class="ui-g" style="padding: 0px">
 							<div class="ui-g-12 ui-md-6 ui-lg-3">
 								<p:outputLabel>
 									<h2 style="color: #9fca3b">#{product.formattedPrice}</h2>
@@ -56,7 +57,8 @@
 							<div class="ui-g-12 ui-md-6 ui-lg-3">
 								<div class="ui-g-12 ui-md-6 ui-lg-6">
 									<p:graphicImage
-										url="https://darwin.affiliatewindow.com/images/upload/zanox/merchant/profile/#{product.programId}.png?1393598179"></p:graphicImage>
+										url="https://darwin.affiliatewindow.com/images/upload/zanox/merchant/profile/#{product.programId}.png?1393598179"
+										style="height:60px"></p:graphicImage>
 								</div>
 							</div>
 							<div class="ui-g-12 ui-md-6 ui-lg-3">
