--- a/Shop/webapp/header.xhtml
+++ b/Shop/webapp/header.xhtml
@@ -8,7 +8,7 @@
 
 <h:body>
 	<h:panelGrid columns="1" style="padding: 25px">
-		<p:outputLabel value="compara preço"
+		<p:outputLabel value="arromba preço"
 			style="font-family: TelefonicaHeadLine-Light; letter-spacing: 10px; color: white; font-size: 20px; text-shadow: 1px 1px 20px #FFFFFF;" />
 	</h:panelGrid>
 </h:body>
