--- a/Shop/webapp/product.xhtml
+++ b/Shop/webapp/product.xhtml
@@ -32,8 +32,9 @@
 			<p:panel style="height: 280px">
 				<div class="ui-g">
 					<div class="ui-g-12 ui-md-4 ui-lg-4">
-						<p:graphicImage url="#{product.image}" alt="#{product.name}"
-							style="max-height:250px; max-width:250px" />
+						<img src="#{product.image}" style="height: 250px"
+							alt="#{product.name}"
+							onerror="this.src='/Shop/resources/images/no-image.png'" />
 					</div>
 					<div class="ui-g-12 ui-md-8 ui-lg-8">
 						<div class="ui-g" style="padding: 0px">
@@ -58,7 +59,7 @@
 								<div class="ui-g-12 ui-md-6 ui-lg-6">
 									<p:graphicImage
 										url="https://darwin.affiliatewindow.com/images/upload/zanox/merchant/profile/#{product.programId}.png?1393598179"
-										style="height:60px"></p:graphicImage>
+										style="width:120px"></p:graphicImage>
 								</div>
 							</div>
 							<div class="ui-g-12 ui-md-6 ui-lg-3">
