New filter message

--- a/Shop/webapp/products.xhtml
+++ b/Shop/webapp/products.xhtml
@@ -53,7 +53,7 @@
 				</a>
 			</p:column>
 
-			<p:column headerText="Características do Produto"
+			<p:column headerText="Filtrar por Modelo, Marca, Características..."
 				filterBy="#{product.name}" footerText="Nome"
 				filterFunction="#{filterController.customFilter}"
 				style="text-align: center">
