--- a/Shop/webapp/products.xhtml
+++ b/Shop/webapp/products.xhtml
@@ -24,10 +24,7 @@
 </h:head>
 
 <h:body style="margin:0; padding:0;">
-	<div class="ui-grid ui-grid-responsive"
-		style="background-color: black; height: 80px; background-repeat: no-repeat; background-size: 100% 100%;">
-		<ui:include src="header.xhtml" />
-	</div>
+	<ui:include src="header2.xhtml" />
 
 	<h:form id="form">
 		<h:outputLabel value="#{link}" />
