--- a/Shop/webapp/header4.xhtml
+++ b/Shop/webapp/header4.xhtml
@@ -8,11 +8,11 @@
 <h:body>
 	<p:graphicImage url="/resources/images/bg.png"
 		style="text-align:center; position: absolute"></p:graphicImage>
-	<p:graphicImage url="/resources/images/w1.png"
+	<p:graphicImage url="/resources/images/w4.png"
 		style="text-align:center; position: absolute"></p:graphicImage>
 	<p:graphicImage url="/resources/images/ap.png"
 		style="text-align:center; position: absolute"></p:graphicImage>
 	<div
-		style="background: linear-gradient(-90deg, green, #f0ca2d); position: relative; left: 458px; height: 120px; width: calc(100% - 458px); background-repeat: no-repeat; background-size: 100% 120px" />
+		style="background: linear-gradient(-90deg, purple, #f0ca2d); position: relative; left: 458px; height: 120px; width: calc(100% - 458px); background-repeat: no-repeat; background-size: 100% 120px" />
 </h:body>
 </html>
