--- a/Shop/webapp/index.xhtml
+++ b/Shop/webapp/index.xhtml
@@ -3,7 +3,8 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
 
 <f:metadata>
 	<f:viewParam name="#{main}"></f:viewParam>
@@ -18,10 +19,15 @@
 </h:head>
 
 <h:body style="margin:0; padding:0;">
-	<div class="ui-grid ui-grid-responsive"
-		style="background-color: black; height: 80px; background-repeat: no-repeat; background-size: 100% 100%;">
+	<c:if test="#{empty main}">
 		<ui:include src="header.xhtml" />
-	</div>
+	</c:if>
+	<c:if test="#{not empty main and empty sub}">
+		<ui:include src="header4.xhtml" />
+	</c:if>
+	<c:if test="#{not empty sub}">
+		<ui:include src="header5.xhtml" />
+	</c:if>
 
 	<ui:include src="category.xhtml" />
 	<!--ui:include src="content.xhtml" /-->
