--- a/Shop/webapp/product.xhtml
+++ b/Shop/webapp/product.xhtml
@@ -18,18 +18,14 @@
 </h:head>
 
 <h:body style="margin:0; padding:0;">
-	<div class="ui-grid ui-grid-responsive"
-		style="background-color: black; height: 80px; background-repeat: no-repeat; background-size: 100% 100%;">
-		<ui:include src="header.xhtml" />
-	</div>
+	<ui:include src="header3.xhtml" />
 
 	<center>
 		<h:form>
 			<ui:param name="product"
 				value="#{productController.product(category, index)}" />
 
-
-			<p:panel style="height: 280px">
+			<p:panel>
 				<div class="ui-g">
 					<div class="ui-g-12 ui-md-4 ui-lg-4">
 						<img src="#{product.image}" style="height: 250px"
@@ -39,34 +35,51 @@
 					<div class="ui-g-12 ui-md-8 ui-lg-8">
 						<div class="ui-g" style="padding: 0px">
 							<div class="ui-g-12 ui-md-12 ui-lg-12">
-								<p:outputLabel>
-									<h1 style="color: #00a6dd;">#{product.name}</h1>
-								</p:outputLabel>
+								<p:panel style="text-align: center">
+									<f:facet name="header"></f:facet>
+									<p:outputLabel>
+										<h1 style="color: #00a6dd;">#{product.name}</h1>
+									</p:outputLabel>
+								</p:panel>
 							</div>
 						</div>
 						<div class="ui-g" style="padding: 0px">
 							<div class="ui-g-12 ui-md-6 ui-lg-3">
-								<p:outputLabel>
-									<h2 style="color: #9fca3b">#{product.formattedPrice}</h2>
-								</p:outputLabel>
+								<p:panel style="text-align: center">
+									<f:facet name="header">Preço</f:facet>
+									<p:outputLabel>
+										<h2 style="color: #9fca3b">#{product.formattedPrice}</h2>
+									</p:outputLabel>
+								</p:panel>
 							</div>
 							<div class="ui-g-12 ui-md-6 ui-lg-3">
-								<p:outputLabel>
-									<h2 style="color: grey">#{product.brand}</h2>
-								</p:outputLabel>
+								<p:panel style="text-align: center"
+									rendered="#{not empty product.brand}">
+									<f:facet name="header">Marca
+									</f:facet>
+									<p:outputLabel>
+										<h2 style="color: grey">#{product.brand}</h2>
+									</p:outputLabel>
+								</p:panel>
 							</div>
 							<div class="ui-g-12 ui-md-6 ui-lg-3">
-								<div class="ui-g-12 ui-md-6 ui-lg-6">
+								<p:panel style="text-align: center">
+									<f:facet name="header">Loja
+									</f:facet>
 									<p:graphicImage
 										url="https://darwin.affiliatewindow.com/images/upload/zanox/merchant/profile/#{product.programId}.png?1393598179"
-										style="width:120px"></p:graphicImage>
-								</div>
+										style="max-height:62px; max-width: 200px"></p:graphicImage>
+								</p:panel>
 							</div>
 							<div class="ui-g-12 ui-md-6 ui-lg-3">
-								<p:link href="#{product.link}" class="button"
-									style="color: white">
-									<h2>Ir à loja</h2>
-								</p:link>
+								<p:panel style="text-align: center">
+									<f:facet name="header">
+									</f:facet>
+									<p:link href="#{product.link}" class="button"
+										style="color: white;box-shadow: 2px 2px 2px #888888;">
+										<h2>Ir à loja</h2>
+									</p:link>
+								</p:panel>
 							</div>
 						</div>
 					</div>
