--- a/Shop/webapp/header.xhtml
+++ b/Shop/webapp/header.xhtml
@@ -10,9 +10,9 @@
 		style="text-align:center; position: absolute"></p:graphicImage>
 	<p:graphicImage url="/resources/images/w1.png"
 		style="text-align:center; position: absolute"></p:graphicImage>
-	<p:graphicImage url="/resources/images/ap.png"
-		style="text-align:center; position: absolute"></p:graphicImage>
+	<a href="/Shop"><p:graphicImage url="/resources/images/ap.png"
+			style="text-align:center; position: absolute"></p:graphicImage></a>
 	<div
-		style="background: linear-gradient(-90deg, green, #f0ca2d); position: relative; left: 458px; height: 120px; width: calc(100% - 458px); background-repeat: no-repeat; background-size: 100% 120px" />
+		style="background: linear-gradient(-90deg, green, #f0ca2d); position: relative; left: 457px; height: 120px; width: calc(100% - 458px); background-repeat: no-repeat; background-size: 100% 120px" />
 </h:body>
 </html>
