--- a/Shop/webapp/category.xhtml
+++ b/Shop/webapp/category.xhtml
@@ -3,24 +3,42 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
 
 <h:body>
 	<h:form>
 		<p:dataGrid var="category"
 			value="#{categoryController.categoryList(main, sub, third)}"
 			columns="6" layout="grid">
-			<p:panel style="text-align: center">
-				<f:facet name="header">
-					<p:link
-						href="#{categoryController.link(main, sub, category.linkName, category.name)}/"
-						value="#{category.name}" style="text-decoration: none !important"></p:link>
-				</f:facet>
-				<a href="#{category.linkName}/"> <p:graphicImage
-						value="resources/images/#{category.linkName}.png" width="75"
-						rendered="#{categoryController.isFirstLevel(main)}"></p:graphicImage>
-				</a>
-			</p:panel>
+			<c:if test="#{empty main}">
+				<p:panel
+					style="text-align: center; background-image:url('/Shop/resources/images/t1.png'); background-size: 100% 165px; background-position: 0px 0px; background-repeat: no-repeat">
+					<f:facet name="header">
+						<p:link
+							href="#{categoryController.link(main, sub, category.linkName, category.name)}/"
+							value="#{category.name}" style="text-decoration: none !important"></p:link>
+					</f:facet>
+					<a href="#{category.linkName}/"> <p:graphicImage
+							value="resources/images/#{category.linkName}.png" width="75"
+							rendered="#{categoryController.isFirstLevel(main)}"></p:graphicImage>
+					</a>
+				</p:panel>
+			</c:if>
+			<c:if test="#{not empty main}">
+				<p:panel
+					style="height: 75px; text-align: center; background-image:url('/Shop/resources/images/t1.png'); background-size: 100% 200px; background-position: 0px -110px;">
+					<f:facet name="header">
+						<p:link
+							href="#{categoryController.link(main, sub, category.linkName, category.name)}/"
+							value="#{category.name}" style="text-decoration: none !important"></p:link>
+					</f:facet>
+					<a href="#{category.linkName}/"> <p:graphicImage
+							value="resources/images/#{category.linkName}.png" width="75"
+							rendered="#{categoryController.isFirstLevel(main)}"></p:graphicImage>
+					</a>
+				</p:panel>
+			</c:if>
 		</p:dataGrid>
 	</h:form>
 </h:body>
