--- a/Shop/webapp/product.xhtml
+++ b/Shop/webapp/product.xhtml
@@ -48,7 +48,7 @@
 							</div>
 						</div>
 						<div class="ui-g" style="padding: 0px">
-							<div class="ui-g-12 ui-md-6 ui-lg-3">
+							<div class="ui-g-12 ui-md-6 ui-lg-4">
 								<p:panel
 									style="height: 150px; text-align: center; background-image:url('/Shop/resources/images/t1.png'); background-size: 100% 165px; background-position: 0px 0px; background-repeat: no-repeat">
 									<f:facet name="header">Preço</f:facet>
@@ -57,7 +57,7 @@
 									</p:outputLabel>
 								</p:panel>
 							</div>
-							<div class="ui-g-12 ui-md-6 ui-lg-3">
+							<div class="ui-g-12 ui-md-6 ui-lg-4">
 								<p:panel
 									style="height: 150px;text-align: center; background-image:url('/Shop/resources/images/t1.png'); background-size: 100% 165px; background-position: 0px 0px; background-repeat: no-repeat"
 									rendered="#{not empty product.brand}">
@@ -68,7 +68,7 @@
 									</p:outputLabel>
 								</p:panel>
 							</div>
-							<div class="ui-g-12 ui-md-6 ui-lg-3">
+							<div class="ui-g-12 ui-md-6 ui-lg-4">
 								<p:panel
 									style="height: 150px;text-align: center; background-image:url('/Shop/resources/images/t1.png'); background-size: 100% 165px; background-position: 0px 0px; background-repeat: no-repeat">
 									<f:facet name="header">Loja</f:facet>
@@ -77,13 +77,13 @@
 										style="max-height: 52px; max-width: 170px; position: relative; top: 4px; left: -17px"></p:graphicImage>
 								</p:panel>
 							</div>
-							<div class="ui-g-12 ui-md-6 ui-lg-3">
-								<p:panel style="text-align: center; padding: 14px;">
+							<div class="ui-g-12 ui-md-6 ui-lg-4">
+								<p:panel style="text-align: center; padding: 14px">
 									<f:facet name="header">
 									</f:facet>
 									<p:link href="#{product.link}" class="button"
-										style="color: white;box-shadow: 2px 2px 2px #888888;">
-										<h2>Ir à loja</h2>
+										style="color: white;box-shadow: 2px 2px 2px #888888;height: 138px">
+										<h2 style="position: relative; top: 35px">Ir à loja</h2>
 									</p:link>
 								</p:panel>
 							</div>
