--- a/Shop/webapp/category.xhtml
+++ b/Shop/webapp/category.xhtml
@@ -13,7 +13,7 @@
 			columns="6" layout="grid">
 			<c:if test="#{empty main}">
 				<p:panel
-					style="text-align: center; background-image:url('/Shop/resources/images/t1.png'); background-size: 100% 165px; background-position: 0px 0px; background-repeat: no-repeat">
+					style="text-align: center; background-image:url('/Shop/resources/images/t1.png'); background-size: 100% 165px; background-position: -25px 20px; background-repeat: no-repeat">
 					<f:facet name="header">
 						<p:link
 							href="#{categoryController.link(main, sub, category.linkName, category.name)}/"
@@ -21,13 +21,14 @@
 					</f:facet>
 					<a href="#{category.linkName}/"> <p:graphicImage
 							value="resources/images/#{category.linkName}.png" width="75"
-							rendered="#{categoryController.isFirstLevel(main)}"></p:graphicImage>
+							rendered="#{categoryController.isFirstLevel(main)}"
+							style="position: relative; left: -45px"></p:graphicImage>
 					</a>
 				</p:panel>
 			</c:if>
 			<c:if test="#{not empty main}">
 				<p:panel
-					style="height: 75px; text-align: center; background-image:url('/Shop/resources/images/t1.png'); background-size: 100% 200px; background-position: 0px -110px;">
+					style="height: 75px; text-align: center; background-image:url('/Shop/resources/images/t3.png'); background-size: 100% 200px; background-position: 0px 45%;">
 					<f:facet name="header">
 						<p:link
 							href="#{categoryController.link(main, sub, category.linkName, category.name)}/"
