--- a/Shop/webapp/product.xhtml
+++ b/Shop/webapp/product.xhtml
@@ -25,73 +25,73 @@
 			<ui:param name="product"
 				value="#{productController.product(category, index)}" />
 
-			<p:panel>
-				<div class="ui-g">
-					<div class="ui-g-12 ui-md-8 ui-lg-8">
-						<div class="ui-g" style="padding: 0px">
-							<div class="ui-g-12 ui-md-6 ui-lg-6">
-								<p:panel
-									style="height: 275px;text-align: center; background-image:url('/Shop/resources/images/t2.png'); background-size: 100% 100%; background-position: 0px 0px; background-repeat: no-repeat">
-									<f:facet name="header">Produto</f:facet>
-									<p:outputLabel>
-										<h3
-											style="color: black; font-weight: bold; font-style: italic; position: relative; left: 40%; width: 60%">#{product.name}</h3>
-									</p:outputLabel>
-								</p:panel>
-							</div>
-							<div class="ui-g-12 ui-md-6 ui-lg-6">
-								<p:panel style="text-align: center; height: 275px">
-									<img src="#{product.image}"
-										style="height: 250px; max-width: 250px; position: relative"
-										alt="#{product.name}"
-										onerror="this.src='/Shop/resources/images/no-image.png'" />
-								</p:panel>
-							</div>
+			<div class="ui-g">
+				<div class="ui-g-12 ui-md-12 ui-lg-12">
+					<div class="ui-g" style="padding: 0px">
+						<div class="ui-g-12 ui-md-12 ui-lg-6">
+							<p:panel
+								style="height: 385px;text-align: center; background-image:url('/Shop/resources/images/t1.png'); background-size: 140% 140%; background-position: -60px -57px; background-repeat: no-repeat">
+								<img src="#{product.image}"
+									style="text-align: center; height: 250px; max-width: 250px; position: relative; top: 10px; padding: 20px"
+									alt="#{product.name}"
+									onerror="this.src='/Shop/resources/images/no-image.png'" />
+							</p:panel>
 						</div>
-						<div class="ui-g" style="padding: 0px">
-							<div class="ui-g-12 ui-md-6 ui-lg-3">
-								<p:panel
-									style="height: 150px; text-align: center; background-image:url('/Shop/resources/images/t1.png'); background-size: 100% 165px; background-position: 0px 0px; background-repeat: no-repeat">
-									<f:facet name="header">Preço</f:facet>
-									<p:outputLabel>
-										<h2 style="color: #9fca3b; position: relative; left: -17px">#{product.formattedPrice}</h2>
-									</p:outputLabel>
-								</p:panel>
-							</div>
-							<div class="ui-g-12 ui-md-6 ui-lg-3">
-								<p:panel
-									style="height: 150px;text-align: center; background-image:url('/Shop/resources/images/t1.png'); background-size: 100% 165px; background-position: 0px 0px; background-repeat: no-repeat"
-									rendered="#{not empty product.brand}">
-									<f:facet name="header">Marca
+						<div class="ui-g-12 ui-md-12 ui-lg-6">
+							<p:panel
+								style="height: 385px;text-align: center; background-image:url('/Shop/resources/images/t2.png'); background-size: 100% 100%; background-position: 0px 0px; background-repeat: no-repeat">
+								<f:facet name="header">Produto</f:facet>
+								<p:outputLabel>
+									<h2
+										style="color: black; font-weight: bold; font-style: italic; position: relative; left: 40%; width: 60%">#{product.name}</h2>
+								</p:outputLabel>
+							</p:panel>
+						</div>
+
+					</div>
+					<div class="ui-g" style="padding: 0px">
+						<div class="ui-g-12 ui-md-6 ui-lg-3">
+							<p:panel
+								style="height: 150px; text-align: center; background-image:url('/Shop/resources/images/t1.png'); background-size: 100% 165px; background-position: 0px 0px; background-repeat: no-repeat">
+								<f:facet name="header">Preço</f:facet>
+								<p:outputLabel>
+									<h2 style="color: #9fca3b; position: relative; left: -17px">#{product.formattedPrice}</h2>
+								</p:outputLabel>
+							</p:panel>
+						</div>
+						<div class="ui-g-12 ui-md-6 ui-lg-3">
+							<p:panel
+								style="height: 150px;text-align: center; background-image:url('/Shop/resources/images/t1.png'); background-size: 100% 165px; background-position: 0px 0px; background-repeat: no-repeat"
+								rendered="#{not empty product.brand}">
+								<f:facet name="header">Marca
 									</f:facet>
-									<p:outputLabel>
-										<h2 style="color: grey; position: relative; left: -17px">#{product.brand}</h2>
-									</p:outputLabel>
-								</p:panel>
-							</div>
-							<div class="ui-g-12 ui-md-6 ui-lg-3">
-								<p:panel
-									style="height: 150px;text-align: center; background-image:url('/Shop/resources/images/t1.png'); background-size: 100% 165px; background-position: 0px 0px; background-repeat: no-repeat">
-									<f:facet name="header">Loja</f:facet>
-									<p:graphicImage
-										url="https://darwin.affiliatewindow.com/images/upload/zanox/merchant/profile/#{product.programId}.png?1393598179"
-										style="max-height: 50px; max-width: 163px; position: relative; top: 2px; left: -18px"></p:graphicImage>
-								</p:panel>
-							</div>
-							<div class="ui-g-12 ui-md-6 ui-lg-3">
-								<p:panel style="text-align: center; padding: 14px">
-									<f:facet name="header">
-									</f:facet>
-									<p:link href="#{product.link}" class="button"
-										style="color: white;box-shadow: 2px 2px 2px #888888;height: 115px">
-										<h2 style="position: relative; top: 25px">Ir à loja</h2>
-									</p:link>
-								</p:panel>
-							</div>
+								<p:outputLabel>
+									<h2 style="color: grey; position: relative; left: -17px">#{product.brand}</h2>
+								</p:outputLabel>
+							</p:panel>
+						</div>
+						<div class="ui-g-12 ui-md-6 ui-lg-3">
+							<p:panel
+								style="height: 150px;text-align: center; background-image:url('/Shop/resources/images/t1.png'); background-size: 100% 165px; background-position: 0px 0px; background-repeat: no-repeat">
+								<f:facet name="header">Loja</f:facet>
+								<p:graphicImage
+									url="https://darwin.affiliatewindow.com/images/upload/zanox/merchant/profile/#{product.programId}.png?1393598179"
+									style="max-height: 50px; max-width: 163px; position: relative; top: 2px; left: -18px"></p:graphicImage>
+							</p:panel>
+						</div>
+						<div class="ui-g-12 ui-md-6 ui-lg-3">
+							<p:panel style="text-align: center; padding: 14px">
+								<f:facet name="header">
+								</f:facet>
+								<p:link href="#{product.link}" class="button"
+									style="color: white;box-shadow: 2px 2px 2px #888888;height: 115px">
+									<h2 style="position: relative; top: 25px">Ir à loja</h2>
+								</p:link>
+							</p:panel>
 						</div>
 					</div>
 				</div>
-			</p:panel>
+			</div>
 
 		</h:form>
 	</center>
